# bongocat

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  util.c  util.h
src/head/: head.c  head.h
src/keyboard_arm/: keyboard_arm.c  keyboard_arm.h
src/mouse/: mouse.c  mouse.h
src/mouse_arm/: mouse_arm.c  mouse_arm.h
src/scenes/: scenes.c  scenes.h
src/scenes/bongocat/: bongocat.c  bongocat.h
src/scenes/settings/: settings.c  settings.h
src/slider/: slider.c  slider.h
src/sprite/: sprite.c  sprite.h
src/texture/: texture.c  texture.h
